# effect-zoo

./: cabal.project  effect-zoo.cabal
src/: Main.hs
src/EffectZoo/Scenario/: BigStack.hs  CountDown.hs  Reinterpretation.hs
src/EffectZoo/Scenario/BigStack/Polysemy/: Identity.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/CountDown/Polysemy/: Program.hs
