name:                effect-zoo
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
build-type:          Simple
cabal-version:       >=1.10

executable effect-zoo
  main-is:             Main.hs
  build-depends:       base >=4.11,
                       criterion >=1.5,
                       freer-simple >=1.1,
                       transformers >=0.5,
                       mtl >=2.2,
                       polysemy,
                       cassava,
                       bytestring,
                       statistics
  hs-source-dirs:      src
  other-modules:
    EffectZoo.Scenario.BigStack
    EffectZoo.Scenario.BigStack.FreerSimple.Identity
    EffectZoo.Scenario.BigStack.FreerSimple.Main
    EffectZoo.Scenario.BigStack.FreerSimple.Program
    EffectZoo.Scenario.BigStack.MTL.Identity
    EffectZoo.Scenario.BigStack.MTL.Main
    EffectZoo.Scenario.BigStack.MTL.Program
    EffectZoo.Scenario.CountDown
    EffectZoo.Scenario.CountDown.FreerSimple.Main
    EffectZoo.Scenario.CountDown.FreerSimple.Program
    EffectZoo.Scenario.CountDown.MTL.LazyStateT
    EffectZoo.Scenario.CountDown.MTL.Program
    EffectZoo.Scenario.CountDown.MTL.StrictStateT
    EffectZoo.Scenario.CountDown.Reference
    EffectZoo.Scenario.Reinterpretation
    EffectZoo.Scenario.Reinterpretation.FreerSimple.HTTP
    EffectZoo.Scenario.Reinterpretation.FreerSimple.Logging
    EffectZoo.Scenario.Reinterpretation.FreerSimple.Main
    EffectZoo.Scenario.Reinterpretation.FreerSimple.Zooit
    EffectZoo.Scenario.Reinterpretation.Shared
    EffectZoo.Scenario.BigStack.Polysemy.Identity
    EffectZoo.Scenario.BigStack.Polysemy.Main
    EffectZoo.Scenario.BigStack.Polysemy.Program
    EffectZoo.Scenario.CountDown.Polysemy.Main
    EffectZoo.Scenario.CountDown.Polysemy.Program
    EffectZoo.Scenario.Reinterpretation.Polysemy.HTTP
    EffectZoo.Scenario.Reinterpretation.Polysemy.Logging
    EffectZoo.Scenario.Reinterpretation.Polysemy.Main
    EffectZoo.Scenario.Reinterpretation.Polysemy.Zooit
  default-language:    Haskell2010
  ghc-options: -O1

  default-extensions:
    BangPatterns DeriveGeneric GADTs GeneralizedNewtypeDeriving KindSignatures
    LambdaCase PackageImports ScopedTypeVariables TemplateHaskell TypeOperators
